# TYSS

./: .gitignore  .gitmodules  GD_INSTRUCTIONS.MD  JKSM.rsf  Makefile  README.MD  README_zh.MD  TYSS.rsf
.github/workflows/: adrivehelper.yml  build.yaml
adrivehelper/: Cargo.toml  build.cmd  deps.7z
adrivehelper/src/: main.rs
gfx/: sprites.t3s
inc/: 3dsgettext.h  cfg.h  cheatmanager.h  crypto.h  curlfuncs.h  data.h  fs.h  gd.h  gfx.h  makercode.h  misc.h  smdh.h  spi.h  sys.h  thrdMgr.h  type.h  ui.h  util.h
inc/drive/: IDrive.h  adrive.h  curlfuncs.h  gd.h
inc/ui/: boss.h  button.h  ext.h  fld.h  menu.h  set.h  shrd.h  sysview.h  ttl.h  ttlview.h
po/: en_US.po  zh_Hant.po
res/: TYSS.bnr  banner.bcwav
romfs/: cbf_std.bcfnt
src/: 3dsgettext.cpp  cfg.cpp  cheatmanager.cpp  crypto.cpp  curlfuncs.cpp  data.cpp  fs.cpp  gd.cpp  gfx.cpp  main.cpp  misc.cpp  spi.cpp  sys.cpp  thrdMgr.cpp  ui.cpp  util.cpp
src/drive/: adrive.cpp  curlfuncs.cpp  gd.cpp
src/ui/: boss.cpp  button.cpp  ext.cpp  fld.cpp  menu.cpp  set.cpp  shrd.cpp  sysview.cpp  ttl.cpp  ttlview.cpp
