[package]
name = "adrivehelper"
version = "1.0.0"
edition = "2021"

[dependencies]
wry = "0.52"
winit = "0.30"
serde_json = "1.0"
url = "2.0"
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "debuginfo"

[package.metadata.windows-subsystem]
windows = true
